# Visual_Search

./: README.md  pyproject.toml  requirements.txt
project_visual_search/: utils.py
project_visual_search/data/configs/: deepfashion2.yaml  fashionpedia.yaml
project_visual_search/data/deepfashion2/: create_labels.py  deepfashion_to_coco.py
project_visual_search/data/fashionpedia/: create_labels.py  fashionpedia_to_coco.py
project_visual_search/detr/: finetune_w_hugginface.py  finetuning.py  predict.py  transfer_learning.py  validation.py
project_visual_search/notebooks/: Yolo_Fine_tuning.ipynb  ft_deepfashion.ipynb  ft_fashionpedia.ipynb
project_visual_search/yolo_v8/: finetuning.py  predict.py  transfer_learning.py  validation.py
