[tool.poetry]
name = "project-visual-search"
version = "0.1.0"
description = ""
authors = ["Aymen Kallala <akallala@quantmetry.com>"]
readme = "README.md"
packages = [{include = "project_visual_search"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.0.0"
pillow = ">=7.1.2"
tqdm = ">=4.64.0"
ipykernel = "^6.24.0"
psutil = "^5.9.5"
pyyaml = ">=5.3.1"
setuptools = "^68.0.0"
numpy = "^1.25.1"
ultralytics = "^8.0.142"
tensorboard = "^2.13.0"
black = "^23.7.0"
mlflow = "^2.5.0"
transformers = {extras = ["torch"], version = "^4.31.0"}
datasets = "^2.14.3"
albumentations = "^1.3.1"
timm = "^0.9.5"
pycocotools = "^2.0.6"
evaluate = "^0.4.0"
isort = "^5.12.0"

[[tool.poetry.source]]
name = "aifactory"
url = "https://pkgs.dev.azure.com/Christian-Dior/e93e16e3-116f-4b44-a461-bf40ec428317/_packaging/CDC.pypi/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
